# sql-demo

./: .env.example  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/loader/: __main__.py  cli.py  config.py  db.py  init_db.py  loader.py  logger.py  models.py  repository.py  schema.py  source.py
tests/: conftest.py  test_parsers.py  test_validators.py
