[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sql-demo"
version = "0.1.0"
description = "Example async PostgreSQL loader (OpenPhish/AlienVault/URLHaus)"
authors = [{name = "Filip Škola", email = "filip@fqs.cz"}]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Framework :: AsyncIO",
  "Development Status :: 3 - Alpha",
]

dependencies = [
  "sqlalchemy[asyncio]>=2.0",
  "psycopg[binary]>=3.1",
  "aiohttp>=3.9",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
]

[project.scripts]
loader = "loader.__main__:sync_main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
